--- a/pytest.ini
+++ b/pytest.ini
@@ -10,4 +10,4 @@ log_cli_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 markers =
-    smoke: smoke suite
+    regression: regression suite
